Fixed scrollbar appearing from modifying page contents and cleaned up CSS.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,17 +1,8 @@
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
 html {
     color: #222;
     font-size: 1em;
     line-height: 1.4;
+    overflow-y: scroll;
 }
 
 /*
@@ -32,9 +23,7 @@ html {
     text-shadow: none;
 }
 
-/*
- * A better looking default horizontal rule
- */
+/* A better looking default horizontal rule */
 
 hr {
     display: block;
@@ -60,9 +49,7 @@ video {
     vertical-align: middle;
 }
 
-/*
- * Remove default fieldset styles.
- */
+/* Remove default fieldset styles. */
 
 fieldset {
     border: 0;
@@ -70,9 +57,7 @@ fieldset {
     padding: 0;
 }
 
-/*
- * Allow only vertical resizing of textareas.
- */
+/* Allow only vertical resizing of textareas. */
 
 textarea {
     resize: vertical;
